fix build under mac

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,11 @@ if(WIN32)
 	include_directories("C:\\Users\\Administrator\\Downloads\\openssl-OpenSSL_1_0_2n\\build\\include")
 	link_libraries("C:\\Users\\Administrator\\Downloads\\openssl-OpenSSL_1_0_2n\\build\\lib\\libeay32.lib")
 elseif(APPLE)
-	include_directories(/usr/local/ssl/include)
+	if (EXISTS /usr/local/opt/openssl)
+		list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/openssl")
+		set(CMAKE_EXE_LINKER_FLAGS "-L/usr/local/opt/openssl/lib")
+		include_directories(/usr/local/opt/openssl/include)
+	endif()
 	link_libraries(ssl)
 	link_libraries(crypto)
 elseif(UNIX)
