--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ os:
 compiler:
   - gcc
   - clang
+before_install:
+  - [ "$TRAVIS_OS_NAME" != osx ] || brew update
+  - [ "$TRAVIS_OS_NAME" != osx ] || brew install cmake
 script: cmake . && make
 dist: trusty
 sudo: false
