--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ compiler:
   - gcc
   - clang
 before_install:
-  - [ "$TRAVIS_OS_NAME" != osx ] || brew update
-  - [ "$TRAVIS_OS_NAME" != osx ] || brew install cmake
+  - '[ "$TRAVIS_OS_NAME" != osx ] || brew update'
+  - '[ "$TRAVIS_OS_NAME" != osx ] || brew install cmake'
 script: cmake . && make
 dist: trusty
 sudo: false
