--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,12 +23,13 @@ if(WIN32)
 	link_libraries("C:\\Users\\Administrator\\Downloads\\openssl-OpenSSL_1_0_2n\\build\\lib\\libeay32.lib")
 elseif(APPLE)
 	if (EXISTS /usr/local/opt/openssl)
-		list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/openssl")
-		set(CMAKE_EXE_LINKER_FLAGS "-L/usr/local/opt/openssl/lib")
-		include_directories(/usr/local/opt/openssl/include)
+		set(OPENSSL_ROOT_DIR /usr/local/opt/openssl)
+		# list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/openssl")
+		# set(CMAKE_EXE_LINKER_FLAGS "-L/usr/local/opt/openssl/lib")
+		# include_directories(/usr/local/opt/openssl/include)
 	endif()
-	link_libraries(ssl)
-	link_libraries(crypto)
+	FIND_PACKAGE(OpenSSL)
+	link_libraries(OpenSSL::SSL)
 elseif(UNIX)
 	include_directories(/usr/local/ssl/include)
 	link_libraries(ssl)
@@ -42,4 +43,16 @@ aux_source_directory(util DIR_LIB_SRCS)
 aux_source_directory(util/crypto DIR_LIB_SRCS)
 aux_source_directory(util/logging DIR_LIB_SRCS)
 
-add_library(jdcloudsigner ${DIR_LIB_SRCS})
+add_library(jdcloudsigner OBJECT ${DIR_LIB_SRCS})
+set_property(TARGET jdcloudsigner PROPERTY POSITION_INDEPENDENT_CODE 1)
+add_library(jdcloudsigner_shared SHARED $<TARGET_OBJECTS:jdcloudsigner>)
+set_target_properties(jdcloudsigner_shared PROPERTIES OUTPUT_NAME jdcloudsigner)
+add_library(jdcloudsigner_static STATIC $<TARGET_OBJECTS:jdcloudsigner>)
+set_target_properties(jdcloudsigner_static PROPERTIES OUTPUT_NAME jdcloudsigner)
+
+install(TARGETS jdcloudsigner_shared
+	LIBRARY
+		DESTINATION lib)
+install(TARGETS jdcloudsigner_static
+	ARCHIVE
+		DESTINATION lib)
