--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - '[ "$TRAVIS_OS_NAME" != osx ] || brew update'
   - '[ "$TRAVIS_OS_NAME" != osx ] || brew upgrade cmake'
 script: cmake --version && cmake . && make && sudo make install
-dist: trusty
+dist: xenial
 addons:
   apt:
     packages:
