Issue 10: install header and lib (#15)
* fix build under mac

* install header

* install headers

* install lib

* add  make install

* fix Demo

* print cmake version

* sudo make install

* use xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ compiler:
 before_install:
   - '[ "$TRAVIS_OS_NAME" != osx ] || brew update'
   - '[ "$TRAVIS_OS_NAME" != osx ] || brew upgrade cmake'
-script: cmake . && make
-dist: trusty
-sudo: false
+script: cmake --version && cmake . && make && sudo make install
+dist: xenial
 addons:
   apt:
     packages:
