--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,13 @@ include_directories(${PROJECT_SOURCE_DIR}/util)
 include_directories(${PROJECT_SOURCE_DIR}/util/crypto)
 include_directories(${PROJECT_SOURCE_DIR}/util/logging)
 add_subdirectory(src)
+add_subdirectory(h)
 
 set(CMAKE_BUILD_TYPE "Release")
 
 add_executable(Demo main.cpp)
 
-target_link_libraries(Demo jdcloudsigner)
+target_link_libraries(Demo jdcloudsigner_static)
 
 if (APPLE AND EXISTS /usr/local/opt/openssl)
     target_link_directories(Demo PRIVATE /usr/local/opt/openssl/lib)
