--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
   - '[ "$TRAVIS_OS_NAME" != osx ] || brew update'
   - '[ "$TRAVIS_OS_NAME" != osx ] || brew upgrade cmake'
 script:
-  - cmake --version && cmake . && make && sudo make install
+  - cmake --version && pkg-config --version
+  - cmake . && make && sudo make install
   - cd examples/makefile && make
 dist: xenial
 addons:
