--- a/examples/makefile/Makefile
+++ b/examples/makefile/Makefile
@@ -4,4 +4,4 @@ main.o: main.cpp
 	g++ -std=c++11 -c -o $@ `pkg-config --cflags libjdcloudsigner` $^
 
 main: main.o
-	g++ -o $@ `pkg-config --libs libjdcloudsigner` $^
+	g++ -o $@ $^ `pkg-config --libs libjdcloudsigner`
