--- a/examples/makefile/Makefile
+++ b/examples/makefile/Makefile
@@ -7,4 +7,8 @@ main: main.o
 	g++ -o $@ $^ `pkg-config --libs libjdcloudsigner`
 
 main_static: main.o
-	g++ -static -Bstatic -o $@ $^ `pkg-config --libs --static libjdcloudsigner`	
+	@if test `uname` = Darwin; then \
+		touch $@; \
+	else \
+		g++ -static -Bstatic -o $@ $^ `pkg-config --libs --static libjdcloudsigner`; \
+	fi
