Hmm, sounds we do not need libssl, only crypto is required
Hmm, sounds we do not need libssl, only crypto is required

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,10 +39,9 @@ elseif(APPLE)
         set(OPENSSL_ROOT_DIR /usr/local/opt/openssl)
     endif()
     FIND_PACKAGE(OpenSSL)
-    link_libraries(OpenSSL::SSL)
+    link_libraries(OpenSSL::Crypto)
 elseif(UNIX)
     include_directories(/usr/local/ssl/include)
-    link_libraries(ssl)
     link_libraries(crypto)
     link_libraries(uuid)
 endif()
