--- a/examples/makefile/Makefile
+++ b/examples/makefile/Makefile
@@ -1,14 +1,14 @@
 all: main main_static
 
 main.o: main.cpp
-	g++ -std=c++11 -c -o $@ `pkg-config --cflags libjdcloudsigner` $^
+	g++ -std=c++11 -c -o $@ `pkg-config --cflags libjdcloud_signer` $^
 
 main: main.o
-	g++ -o $@ $^ `pkg-config --libs libjdcloudsigner`
+	g++ -o $@ $^ `pkg-config --libs libjdcloud_signer`
 
 main_static: main.o
 	@if test `uname` = Darwin; then \
 		touch $@; \
 	else \
-		g++ -static -Bstatic -o $@ $^ `pkg-config --libs --static libjdcloudsigner`; \
+		g++ -static -Bstatic -o $@ $^ `pkg-config --libs --static libjdcloud_signer`; \
 	fi
