--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,9 @@ aux_source_directory(util/crypto DIR_LIB_SRCS)
 aux_source_directory(logging DIR_LIB_SRCS)
 
 add_library(jdcloudsigner OBJECT ${DIR_LIB_SRCS})
-target_include_directories(jdcloudsigner PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(jdcloudsigner PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(jdcloudsigner PRIVATE "${CMAKE_SOURCE_DIR}/internal")
+target_include_directories(jdcloudsigner PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 set_property(TARGET jdcloudsigner PROPERTY POSITION_INDEPENDENT_CODE 1)
 set_property(TARGET jdcloudsigner PROPERTY CXX_STANDARD 11)
 
