--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
   - cmake --version && pkg-config --version
   - cmake . && make && sudo make install
   - cd examples/makefile && make
+  - cd examples/cmake && PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig cmake . && make
 dist: xenial
 addons:
   apt:
