--- a/examples/cmake/CMakeLists.txt
+++ b/examples/cmake/CMakeLists.txt
@@ -32,3 +32,9 @@ link_directories(${MAIN_LIBRARY_DIRS})
 add_executable(main main.cpp)
 target_include_directories(main PUBLIC ${MAIN_INCLUDE_DIRS})
 target_link_libraries(main PUBLIC ${MAIN_LIBRARIES})
+
+if(NOT APPLE)
+    add_executable(main_static main.cpp)
+    target_include_directories(main_static PUBLIC ${MAIN_INCLUDE_DIRS})
+    target_link_libraries(main_static PUBLIC ${MAIN_LIBRARIES} -static)
+endif()
