--- a/examples/cmake/CMakeLists.txt
+++ b/examples/cmake/CMakeLists.txt
@@ -34,7 +34,8 @@ target_include_directories(main PUBLIC ${MAIN_INCLUDE_DIRS})
 target_link_libraries(main PUBLIC ${MAIN_LIBRARIES})
 
 if(NOT APPLE)
+    link_directories(${MAIN_STATIC_LIBRARY_DIRS})
     add_executable(main_static main.cpp)
-    target_include_directories(main_static PUBLIC ${MAIN_INCLUDE_DIRS})
-    target_link_libraries(main_static PUBLIC ${MAIN_LIBRARIES} -static)
+    target_include_directories(main_static PUBLIC ${MAIN_STATIC_INCLUDE_DIRS})
+    target_link_libraries(main_static PUBLIC ${MAIN_STATIC_LIBRARIES} -static)
 endif()
