Issue 33: add googletest and sample testcase (#47)
* add sample

* fix compile

* remove main.cpp from root dir

* test example

* fix dir

* fix compile under cmake 3.12

* add static

* fix static

* add googletest

* compile libgtest

* add testcase

* run make test in travis

* add pthread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,7 @@ project(Demo)
 
 set(CMAKE_CXX_STANDARD 11)
 
+enable_testing()
 add_subdirectory(include)
 add_subdirectory(src)
+add_subdirectory(vendor)
