--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,7 +84,7 @@ add_executable(jdcloud_signer_test
     tests/JdcloudSignerImplTest.cpp
     tests/URITest.cpp
 )
-target_link_libraries(jdcloud_signer_test PUBLIC gtest jdcloudsigner)
-target_include_directories(jdcloud_signer_test PRIVATE "${CMAKE_SOURCE_DIR}/internal")
+target_link_libraries(jdcloud_signer_test PUBLIC gtest jdcloudsigner_shared)
+target_include_directories(jdcloud_signer_test PRIVATE "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/internal")
 add_test(NAME jdcloud_signer_test COMMAND jdcloud_signer_test)
 
