use pkg-config to check libcrypto and uuid

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,12 +20,6 @@ set (Demo_VERSION_DEBUG 0)
 set(VERSION ${Demo_VERSION_MAJOR}.${Demo_VERSION_MINOR}.${Demo_VERSION_DEBUG})
 set(SOVERSION ${VERSION})
 
-if(APPLE)
-    set(PKGCONFIG_REQUIRES_PRIVATE "libcrypto")
-else(APPLE)
-    set(PKGCONFIG_REQUIRES_PRIVATE "libcrypto uuid")
-endif(APPLE)
-
 CONFIGURE_FILE(
     ${CMAKE_CURRENT_SOURCE_DIR}/libjdcloud_signer.pc.in
     ${CMAKE_CURRENT_BINARY_DIR}/libjdcloud_signer.pc
@@ -46,9 +40,10 @@ elseif(APPLE)
     FIND_PACKAGE(OpenSSL)
     link_libraries(OpenSSL::Crypto)
 elseif(UNIX)
-    include_directories(/usr/local/ssl/include)
-    link_libraries(crypto)
-    link_libraries(uuid)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(depends REQUIRED libcrypto uuid)
+    link_libraries(${depends_LIBRARIES})
+    include_directories(${depends_INCLUDE_DIRS})
 endif()
 
 aux_source_directory(. DIR_LIB_SRCS)
