add Meson support (#60)
* add meson example

* add travis for meson

* mkdir build

* install meson on mac

* don't cd

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,14 @@ script:
   - cmake . && make && make test && sudo make install
   - cd $TRAVIS_BUILD_DIR/examples/makefile && make
   - cd $TRAVIS_BUILD_DIR/examples/cmake && PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig cmake . && make
+  - '[ "$TRAVIS_OS_NAME" != osx ] || brew install meson'
+  - cd $TRAVIS_BUILD_DIR/examples/meson && mkdir -p build && PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig meson build && ninja -v -C build
 dist: xenial
 addons:
   apt:
     packages:
     - cmake
+    - meson
 cache:
   directories:
     - /usr/local/Homebrew
