--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ examples/cmake/main
 examples/meson/build
 src/jdcloud_signer_test
 Testing
+*.filters
+*.vcxproj
+*.sln
+*/Debug/
+*.dir
+*.swp
+*.user
