windows可编译通过 (#61)
* fix windows platform

* remove pthread.lib

* 修复windows安装

* bugfix: time zone problem, ut failed

* remove pthread step

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,11 @@ examples/cmake/main
 examples/meson/build
 src/jdcloud_signer_test
 Testing
+*.filters
+*.vcxproj
+*.sln
+*/Debug/
+*.dir
+*.swp
+*.user
 build
