--- a/debian/rules
+++ b/debian/rules
@@ -17,9 +17,5 @@
 %:
 	dh $@
 
-
-# dh_make generated override targets
-# This is example for Cmake (See https://bugs.debian.org/641051 )
-#override_dh_auto_configure:
-#	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
-
+get-orig-source:
+	uscan --verbose --force-download --rename
