--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,7 @@ set (Demo_VERSION_MAJOR 0)
 set (Demo_VERSION_MINOR 2)
 set (Demo_VERSION_DEBUG 0)
 set(VERSION ${Demo_VERSION_MAJOR}.${Demo_VERSION_MINOR}.${Demo_VERSION_DEBUG})
-set(SOVERSION ${VERSION})
+set(SOVERSION ${Demo_VERSION_MAJOR})
 
 if(APPLE)
     set(PKGCONFIG_REQUIRES_PRIVATE "libcrypto")
@@ -33,7 +33,7 @@ CONFIGURE_FILE(
 
 INSTALL(
     FILES ${CMAKE_CURRENT_BINARY_DIR}/libjdcloud_signer.pc
-    DESTINATION lib${LIB_SUFFIX}/pkgconfig
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
 )
 
 if(WIN32)
@@ -67,6 +67,7 @@ set_property(TARGET jdcloudsigner PROPERTY CXX_STANDARD 11)
 
 add_library(jdcloudsigner_shared SHARED $<TARGET_OBJECTS:jdcloudsigner>)
 set_target_properties(jdcloudsigner_shared PROPERTIES OUTPUT_NAME jdcloud_signer)
+set_target_properties(jdcloudsigner_shared PROPERTIES VERSION ${VERSION})
 set_target_properties(jdcloudsigner_shared PROPERTIES SOVERSION ${SOVERSION})
 
 add_library(jdcloudsigner_static STATIC $<TARGET_OBJECTS:jdcloudsigner>)
@@ -74,10 +75,10 @@ set_target_properties(jdcloudsigner_static PROPERTIES OUTPUT_NAME jdcloud_signer
 
 install(TARGETS jdcloudsigner_shared
     LIBRARY
-        DESTINATION lib)
+        DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(TARGETS jdcloudsigner_static
     ARCHIVE
-        DESTINATION lib)
+        DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 add_executable(jdcloud_signer_test
     tests/TestMain.cpp
