--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ project(Demo)
 set(CMAKE_CXX_STANDARD 11)
 
 enable_testing()
+include(GNUInstallDirs)
 add_subdirectory(include)
 add_subdirectory(src)
 add_subdirectory(vendor)
